<resources>
    <string name="app_name">SweetCheck</string>

    <string name="default_web_client_id">1:130104063857:android:c6773d81bdfc370570a8d0</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="archive">Archive</string>
    <string name="i_d_like_to_know_you_more">I\'d like to know you more!</string>
    <string name="the_information_you_receive_now_is_used_to_calculate_the_appropriate_value_per_unit">The information you receive now is used to calculate the appropriate value per unit.</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="next">Next</string>
    <string name="light_sweet_life_sweet_nsweet_check">Light sweet, life sweet,\nSweet check!</string>
    <string name="simplify_the_stats_nempower_the_smart_choices">Simplify the stats\nempower the smart choices</string>
    <string name="light_sweet_life_sweet_nsugar_check">Light sweet, life sweet,\nSugar check!</string>
    <string name="login_with_google">Login with Google</string>
    <string name="nice_to_meet_you_n_how_should_n_i_call_your_name">Nice to meet You! \n How should\n I call your name?</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="food">Food</string>
    <string name="_12g">12g</string>
    <string name="food_name">Food Name</string>
    <string name="_10g">10g</string>
    <string name="i_ll_write_it_down_like_this">I\'ll write it down like this</string>
    <string name="dinner">🍝 Dinner</string>
    <string name="ok">OK</string>
    <string name="are_you_sure_nyou_ate_this">Are you sure\nyou ate this?</string>
    <string name="plus">+</string>
    <string name="when_did_you_neat_this">When did you\neat this?</string>
    <string name="_21">21</string>
    <string name="tue">Tue</string>
    <string name="_22">22</string>
    <string name="wed">Wed</string>
    <string name="_23">23</string>
    <string name="thu">Thu</string>
    <string name="_24">24</string>
    <string name="fri">Fri</string>
    <string name="_25">25</string>
    <string name="sat">Sat</string>
    <string name="_26">26</string>
    <string name="sun">Sun</string>
    <string name="breakfast">🍳 Breakfast</string>
    <string name="lunch">🍛 Lunch</string>
    <string name="snack">🍩 Snack</string>
    <string name="_20">20</string>
    <string name="mon">Mon</string>
    <string name="how_would_you_like_to_scan_the_menu">How would you like to scan the menu?</string>
    <string name="from_gallery">📁 From Gallery</string>
    <string name="take_a_photo">📷 Take a Photo</string>
    <string name="i_ll_recommend_the_menu_for_you">I\'ll recommend the menu for you.</string>
    <string name="recommend_a_menu_with_low_sugar_levels">Recommend a menu with low sugar levels</string>
    <string name="sweetcheck">sweetcheck</string>
    <string name="if_you_input_what_you_ate_ni_ll_give_you_a_sugar_management_solution">If you input what you ate\nI\'ll give you a sugar management solution!</string>
    <string name="record_what_you_ate_more_than_three_times_nfor_sugar_level_analysis">Record what you ate more than three times\nfor sugar level analysis.</string>
    <string name="record_what_you_ate_today_nwith_a_single_photo">Record what you ate today\nwith a single photo!</string>
    <string name="i_ll_give_you_the_right_behavioural_feedback">I\'ll give you the right behavioural feedback</string>
    <string name="today_you_ate_this_kind_of_food">Today, you ate this kind of food.</string>
    <string name="record">➕ Record</string>
    <string name="are_you_thinking_about_what_to_eat">Are you thinking about what to eat?</string>
    <string name="if_you_take_a_picture_of_the_menu_ni_ll_let_you_know_the_menu_with_low_sugar_levels">If you take a picture of the menu,\nI\'ll let you know the menu with low sugar levels.</string>
    <string name="you_can_get_nyour_sugar_levels_nfrom_the_pictures">You can get\nyour sugar levels\nfrom the pictures!</string>
    <string name="_2025_04_21">2025.04.21</string>
    <string name="_2025_04_22">2025.04.22</string>
    <string name="date_loading">날짜를 불러오는 중...</string>
    <string name="you_ate_a_total_of_45_grams_of_sugar">You ate a total of 45 grams of sugar.</string>
    <string name="same_as_about_15_sugar_cubes">Same as about 15 sugar cubes.</string>
    <string name="this_day_you_ate_this_kind_of_food">This day, You ate this kind of food.</string>
    <string name="_2025_07_06">2025.07.06</string>
    <string name="calender">📅</string>
    <string name="gallery">🖼</string>
    <string name="view_more">View more</string>
    <string name="a_lot_of_sugar_intake_at_lunch_neating_more_than_the_right_standard">A lot of sugar intake at Lunch.\nEating more than the right standard.</string>
    <string name="you_can_lower_the_level_nof_stress_management_and_activities">You can lower the level\nof stress management and activities!</string>
    <string name="i_ate_at_this_time">I ate at this time.</string>
    <string name="aren_t_you_stressed_out_when_you_eat_a_lot">Aren\'t you stressed out when you eat a lot?</string>
    <string name="report">Report</string>
    <string name="average_daily_intake_of_45g">Average daily intake of 45g</string>
    <string name="the_highest_intake_of_sugar_for_dinner">The highest intake of sugar for Dinner</string>
    <string name="exceeded_the_per_capita_figure_on_average">Exceeded the per-capita figure on average</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>