<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- 📌 제목 -->
        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure_nyou_ate_this"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <!-- 🍽 음식 리스트 -->
        <LinearLayout
            android:id="@+id/foodResultContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <!-- ➕ 추가 버튼 -->
        <Button
            android:id="@+id/btnAddMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />


        <!-- Next 버튼 프래그먼트에 연동 필요-->
        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:background="@color/orange_600"
            android:layout_marginTop="300dp"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>
