<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="#FFFFFF">

    <!-- 상단 문구 -->
    <TextView
        android:id="@+id/finalSummaryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_ll_write_it_down_like_this"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <!-- 식사 타입 -->
    <TextView
        android:id="@+id/mealType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dinner"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:padding="16dp"
    android:layout_marginBottom="16dp">


    <LinearLayout
            android:id="@+id/summaryContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/totalSugarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Less: 0g"
        android:textSize="16sp"
        android:layout_marginBottom="24dp" />


    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/ok"
        android:textSize="18sp"
        android:backgroundTint="@color/orange_600"
        android:textColor="@android:color/white"/>

</LinearLayout>
